# ruvector

./: .gitignore  Cargo.toml  README.md
.github/workflows/: agentic-synth-ci.yml  build-native.yml  ruvllm-benchmarks.yml
.ruvector/: intelligence.json
crates/prime-radiant/: Cargo.toml
crates/prime-radiant/tests/: storage_tests.rs
crates/ruQu/: Cargo.toml  README.md
crates/ruQu/src/: lib.rs  syndrome.rs  tile.rs  types.rs
crates/ruqu-core/src/: decomposition.rs  lib.rs  planner.rs
crates/ruvector-attention-node/: package.json
crates/ruvector-gnn-node/: package.json
crates/ruvector-graph-node/src/: lib.rs
crates/ruvector-graph/tests/: cypher_parser_tests.rs  hyperedge_tests.rs
crates/ruvector-hyperbolic-hnsw/src/: hnsw.rs  lib.rs  poincare.rs
crates/ruvector-math/: Cargo.toml  README.md
crates/ruvector-math-wasm/: Cargo.toml
crates/ruvector-math-wasm/src/: lib.rs
crates/ruvector-math/src/: lib.rs
crates/ruvector-mincut/: Cargo.toml  README.md
crates/ruvector-mincut-node/src/: lib.rs
crates/ruvector-mincut-wasm/src/: lib.rs
crates/ruvector-mincut/src/: lib.rs
crates/ruvector-mincut/tests/: integration_tests.rs  localkcut_integration.rs  wrapper_tests.rs
crates/ruvector-postgres/: Cargo.toml
crates/ruvector-postgres/benches/: distance_bench.rs
crates/ruvector-postgres/docker/: Dockerfile
crates/ruvector-postgres/docs/: ARCHITECTURE.md  INSTALLATION.md  NEON_COMPATIBILITY.md  SIMD_OPTIMIZATION.md
crates/ruvector-postgres/sql/: ruvector--0.1.0.sql
crates/ruvector-postgres/src/: lib.rs  operators.rs
crates/ruvector-security/src/: lib.rs  middleware.rs
crates/ruvector-server/src/: lib.rs
crates/ruvector-wasm/src/: lib.rs
crates/ruvllm/: Cargo.toml  README.md
crates/ruvllm-cli/: Cargo.toml
crates/ruvllm-cli/src/: main.rs
crates/ruvllm-wasm/: Cargo.toml
crates/ruvllm-wasm/src/: bindings.rs  lib.rs  utils.rs
crates/ruvllm-wasm/src/workers/: shared.rs
crates/ruvllm-wasm/tests/: web.rs
crates/ruvllm/benches/: ane_bench.rs  attention_bench.rs  matmul_bench.rs  metal_bench.rs
crates/ruvllm/docs/: GITHUB_ISSUE_V2.md
crates/ruvllm/examples/: benchmark_model.rs
crates/ruvllm/src/: autodetect.rs  error.rs  kv_cache.rs  lib.rs  memory_pool.rs  speculative.rs  tokenizer.rs
crates/ruvllm/src/backends/: candle_backend.rs  gemma2.rs  mistral_backend.rs  mod.rs  phi3.rs
crates/ruvllm/src/gguf/: mod.rs  parser.rs
crates/ruvllm/src/hub/: download.rs  mod.rs  registry.rs  upload.rs
crates/ruvllm/src/kernels/: accelerate.rs  attention.rs  matmul.rs  mod.rs
crates/ruvllm/src/lora/: micro_lora.rs  mod.rs
crates/ruvllm/src/metal/: context.rs  mod.rs  operations.rs  pipelines.rs
crates/ruvllm/src/metal/shaders/: attention.metal  gemm.metal  norm.metal  rope.metal
crates/ruvllm/src/models/: ruvltra_medium.rs
crates/ruvllm/src/optimization/: mod.rs  realtime.rs
crates/ruvllm/src/serving/: engine.rs
crates/ruvllm/src/training/: claude_dataset.rs  mod.rs  tests.rs
crates/ruvllm/tests/: ane_integration.rs  autodetect_integration.rs  backend_integration.rs  cross_platform.rs  e2e_integration.rs  kernel_integration.rs  lora_integration.rs  serving_integration.rs  sona_integration.rs  speculative_integration.rs
crates/rvf/: Cargo.toml  README.md
crates/rvf/rvf-wasm-api/: Cargo.toml
crates/rvf/rvf-wasm-api/src/: core_api.rs  crypto.rs  drbg.rs  error.rs  host.rs  io.rs  lib.rs  migration.rs  state.rs  telemetry.rs  witness.rs
crates/rvf/tests/rvf-compat-tests/: Cargo.toml
crates/rvf/tests/rvf-compat-tests/src/: lib.rs  report.rs
crates/rvf/tests/rvf-compat-tests/src/tests/: capability_fencing.rs  cross_target.rs  deterministic_boot.rs  ed25519_identity.rs  mod.rs  state_model.rs  stress_streaming.rs  witness_logs.rs
crates/rvlite/: Cargo.toml
crates/sona/: Cargo.toml
crates/sona/src/: napi.rs  napi_simple.rs
crates/wasm-app-store/: Cargo.toml
crates/wasm-app-store/src/: payments_integration.rs
docker/: DOCKERHUB.md  Dockerfile  Dockerfile.combined  Dockerfile.studio  build-studio.sh  docker-compose.yml  init-db.sql
docs/: LLM_BENCHMARK_RESULTS.md
docs/adr/: ADR-001-ruvector-core-architecture.md  ADR-002-ruvllm-integration.md  ADR-003-simd-optimization-strategy.md  ADR-004-kv-cache-management.md  ADR-005-wasm-runtime-integration.md  ADR-006-memory-management.md  ADR-014-coherence-engine.md  ADR-028-graph-genome-mincut-architecture.md  ADR-040-wasm-api-cognitive-containers.md  ADR-041-RVF-Cognitive-Containers.md  ADR-041a-RVF-Cognitive-Container-Implementations.md
docs/adrs/: 0010fixes.md  0011-security-domain.md  0012-performance-domain.md  0013-code-quality-domain.md  0014-api-bindings-domain.md
docs/benchmarks/: gcp-benchmark-report.md
docs/deployment/: google-cloud-sql.md
docs/plans/: rlm.md
docs/ruvllm/: ARCHITECTURE.md  OPTIMIZATION.md
docs/swebench/: README.md  small-model-comparison.md
examples/OSpipe/: Cargo.toml
examples/OSpipe/src/: lib.rs  safety.rs
examples/OSpipe/tests/: integration.rs
examples/apify/agent-training-factory/: .gitignore  (+5 more)
examples/benchmarks/: Cargo.toml
examples/conceptnet-integration/: Cargo.toml
examples/data/: README.md  multi_domain_coherence.csv  multi_domain_patterns.csv
examples/data/climate/: Cargo.toml
examples/data/climate/src/: lib.rs
examples/data/edgar/: Cargo.toml
examples/data/edgar/src/: coherence.rs
examples/data/framework/: Cargo.toml
examples/data/framework/examples/: crossref_demo.rs  realtime_feeds.rs
examples/data/framework/output/: hypothesis_report.txt
examples/data/framework/src/: coherence.rs  export.rs  lib.rs  ruvector_native.rs  visualization.rs
examples/data/openalex/: Cargo.toml
examples/dna/: Cargo.toml
examples/edge/: README.md
examples/prime-radiant/: Cargo.toml
examples/ruvLLM/: Cargo.toml  README.md  package.json
examples/subpolynomial-time/: README.md
npm/: package-lock.json
plans/subpolynomial-time-mincut/: gap-analysis.md
scripts/: benchmark_core.sql  benchmark_final.sql  benchmark_ruvector.sql  benchmark_ruvector_v2.sql
studio/: .env
studio/pages/: _app.tsx
(+337 files in other folders)
