[package]
name = "ruvllm-wasm"
version = "2.0.0"
edition = "2021"
rust-version = "1.77"
license = "MIT"
authors = ["Ruvector Team"]
repository = "https://github.com/ruvnet/ruvector"
description = "WASM bindings for RuvLLM - browser-compatible LLM inference runtime"
keywords = ["wasm", "llm", "inference", "browser", "webassembly"]
categories = ["wasm", "api-bindings", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# RuvLLM integration (WASM-compatible subset)
ruvllm-integration = { path = "../ruvllm", default-features = false, features = ["wasm"] }

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Performance",
    "Window",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"

# Error handling
console_error_panic_hook = { version = "0.1", optional = true }

# Async support for WASM
futures = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = "s"
lto = true
