[package]
name = "ruvector-data-climate"
version = "0.1.0"
edition = "2021"
description = "NOAA/NASA climate data integration with regime shift detection for RuVector"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruvnet/ruvector"
keywords = ["climate", "noaa", "nasa", "time-series", "regime-shift"]
categories = ["science", "database"]

[dependencies]
# Core framework
ruvector-data-framework = { path = "../framework" }

# RuVector crates - FULL integration
ruvector-core = { path = "../../../crates/ruvector-core" }
ruvector-graph = { path = "../../../crates/ruvector-graph" }
ruvector-mincut = { path = "../../../crates/ruvector-mincut" }
ruvector-dag = { path = "../../../crates/ruvector-dag" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "gzip", "stream"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
thiserror = "1.0"

# Data processing & numerical analysis
rayon = "1.10"
ndarray = "0.16"
ndarray-stats = "0.6"

# Statistical analysis
statrs = "0.17"

# Geospatial
geo = "0.28"

[dev-dependencies]
tokio-test = "0.4"
approx = "0.5"

[[example]]
name = "regime_detector"
path = "examples/regime_detector.rs"

[[example]]
name = "sensor_network"
path = "examples/sensor_network.rs"
