[package]
name = "ruvector-data-edgar"
version = "0.1.0"
edition = "2021"
description = "SEC EDGAR financial data integration with coherence analysis for RuVector"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruvnet/ruvector"
keywords = ["edgar", "sec", "finance", "xbrl", "coherence"]
categories = ["finance", "database"]

[dependencies]
# Core framework
ruvector-data-framework = { path = "../framework" }

# RuVector crates - FULL integration
ruvector-core = { path = "../../../crates/ruvector-core" }
ruvector-graph = { path = "../../../crates/ruvector-graph" }
ruvector-mincut = { path = "../../../crates/ruvector-mincut" }
ruvector-dag = { path = "../../../crates/ruvector-dag" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "gzip", "stream"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
thiserror = "1.0"

# Data processing
rayon = "1.10"
ndarray = "0.16"

# XML parsing for XBRL
quick-xml = { version = "0.36", features = ["serialize"] }

# CSV parsing for bulk datasets
csv = "1.3"

# Compression
flate2 = "1.0"
zip = "2.2"

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "coherence_watch"
path = "examples/coherence_watch.rs"

[[example]]
name = "peer_divergence"
path = "examples/peer_divergence.rs"
