[package]
name = "ruvector-data-framework"
version = "0.1.0"
edition = "2021"
description = "Core discovery framework for RuVector dataset integrations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruvnet/ruvector"
keywords = ["vector-database", "discovery", "graph", "mincut", "coherence"]
categories = ["science", "database", "data-structures"]

[dependencies]
# RuVector core crates
ruvector-core = { path = "../../../crates/ruvector-core" }
ruvector-graph = { path = "../../../crates/ruvector-graph" }
ruvector-mincut = { path = "../../../crates/ruvector-mincut" }
ruvector-dag = { path = "../../../crates/ruvector-dag" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for APIs
reqwest = { version = "0.12", features = ["json", "gzip", "stream"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging and errors
tracing = "0.1"
thiserror = "1.0"

# Data processing
rayon = "1.10"
ndarray = "0.16"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[features]
default = ["async"]
async = []
parallel = ["rayon"]

[[example]]
name = "framework_demo"
path = "examples/framework_demo.rs"
