[package]
name = "ruvector-data-framework"
version.workspace = true
edition.workspace = true
description = "Core discovery framework for RuVector dataset integrations"
license.workspace = true
repository.workspace = true
keywords = ["vector-database", "discovery", "graph", "mincut", "coherence"]
categories = ["science", "database", "data-structures"]

[dependencies]
# Async runtime
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# HTTP client for APIs
reqwest.workspace = true

# Time handling
chrono.workspace = true

# Logging and errors
tracing.workspace = true
thiserror.workspace = true

# Data processing
rayon = { workspace = true, optional = true }
ndarray.workspace = true

[dev-dependencies]
tokio-test = "0.4"
rand = "0.8"

[[example]]
name = "cross_domain_discovery"
path = "examples/cross_domain_discovery.rs"

[[example]]
name = "optimized_benchmark"
path = "examples/optimized_benchmark.rs"

[[example]]
name = "discovery_hunter"
path = "examples/discovery_hunter.rs"

[features]
default = ["async", "parallel"]
async = []
parallel = ["rayon"]
