[package]
name = "ruvector-data-openalex"
version = "0.1.0"
edition = "2021"
description = "OpenAlex research intelligence integration for RuVector"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruvnet/ruvector"
keywords = ["openalex", "research", "citations", "graph", "discovery"]
categories = ["science", "database"]

[dependencies]
# Core framework
ruvector-data-framework = { path = "../framework" }

# RuVector crates
ruvector-core = { path = "../../../crates/ruvector-core" }
ruvector-graph = { path = "../../../crates/ruvector-graph" }
ruvector-mincut = { path = "../../../crates/ruvector-mincut" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "gzip", "stream"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
thiserror = "1.0"

# Data processing
rayon = "1.10"

# Compression for bulk downloads
flate2 = "1.0"

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "frontier_radar"
path = "examples/frontier_radar.rs"

[[example]]
name = "cross_domain_bridges"
path = "examples/cross_domain_bridges.rs"
